--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "telegram": "node src/telegram.js",
+    "telegram": "node src/telegram.js --dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
