--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,12 @@
 {
   "name": "server",
-  "type": "module",
   "version": "1.0.0",
   "description": "revise words server API",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
     "telegram": "node src/telegram.js --dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webhook:off": "node ./scripts/removeWebhook.js",
+    "webhook:on": "node ./scripts/setWebhook.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +14,8 @@
     "@notionhq/client": "^2.2.13",
     "dotenv": "^16.3.1",
     "fastify": "^4.22.2",
-    "node-telegram-bot-api": "^0.63.0"
+    "node-telegram-bot-api": "^0.63.0",
+    "telegram-escape": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
