--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@notionhq/client": "^2.2.13",
     "dotenv": "^16.3.1",
     "fastify": "^4.22.2",
+    "jest": "^29.7.0",
     "node-telegram-bot-api": "^0.63.0",
     "telegram-escape": "^1.1.1"
   },
