--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,5 @@
-PORT=port
 TELEGRAM_BOT_API_KEY=telegram.bot.API.key
 TELEGRAM_MASTER_USER=telegram.master.username
 OPEN_AI_API_KEY=openAI.API.key
-MONGODB_PASS=mongodb.pass
-MONGODB_USER=mongodb.user
+MONGODB_URI=mongodb.uri
+MONGODB_DB=mongodb.db
