Added tts for new words

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,7 @@ TELEGRAM_MASTER_USER=telegram.master.username
 OPEN_AI_API_KEY=openAI.API.key
 MONGODB_URI=mongodb.uri
 MONGODB_DB=mongodb.db
+GOOGLE_APPLICATION_CREDENTIALS=path.to.gcloud.service.account
+LANGUAGE_CODE=en-US
+VOICE_NAME=en-US-Wavenet-B
+
