--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "telegram": "node src/telegram.js --dev",
     "webhook:off": "node ./scripts/removeWebhook.js",
-    "webhook:on": "node ./scripts/setWebhook.js"
+    "webhook:on": "node ./scripts/setWebhook.js",
+    "check-types": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +23,9 @@
     "telegram-escape": "^1.1.1"
   },
   "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.63.3",
     "eslint": "^8.48.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "typescript": "^5.3.2"
   }
 }
