--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite --host",
     "ngrok": "ngrok http --domain=fleet-bird-intent.ngrok-free.app 5173",
-    "build": "tsc && vite build",
+    "build": "tsc && npm run build:en && npm run build:pt",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:en": "vite build --mode en",
+    "build:pt": "vite build --mode pt"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
