server: added TMA_URL

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,4 +6,5 @@ MONGODB_DB=mongodb.db
 GOOGLE_APPLICATION_CREDENTIALS=path.to.gcloud.service.account
 LANGUAGE_CODE=en-US
 VOICE_NAME=en-US-Wavenet-B
+TMA_URL=telegram.miniapp.url
 
