--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite --host --mode dev",
     "ngrok": "ngrok http --domain=fleet-bird-intent.ngrok-free.app 5173",
     "build": "tsc && npm run build:en && npm run build:pt",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
