--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "telegram": "node src/telegram.js --dev | pino-pretty",
+    "api": "node src/api/api.js --dev",
     "webhook:off": "node ./scripts/removeWebhook.js",
     "webhook:on": "node ./scripts/setWebhook.js",
     "check-types": "tsc"
@@ -12,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@google-cloud/text-to-speech": "^5.0.1",
     "@notionhq/client": "^2.2.13",
     "dotenv": "^16.3.1",
