--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,10 @@
 TELEGRAM_BOT_API_KEY=telegram.bot.API.key
 TELEGRAM_MASTER_USER=telegram.master.username
-OPEN_AI_API_KEY=openAI.API.key
+OPENAI_API_KEY=key
+OPENAI_EXAMPLE_MODEL=model
 MONGODB_URI=mongodb.uri
 MONGODB_DB=mongodb.db
+NPM_ACCESS_TOKEN=token
 GOOGLE_APPLICATION_CREDENTIALS=path.to.gcloud.service.account
 LANGUAGE_CODE=en-US
 VOICE_NAME=en-US-Wavenet-B
