--- a/.github/workflows/deploy_pt.yml
+++ b/.github/workflows/deploy_pt.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/checkout@v4
 
       - id: auth
+        name: Auth gcloud
         uses: google-github-actions/auth@v3
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
@@ -28,24 +29,25 @@ jobs:
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v3
 
-      - name: Use gcloud
-        run: "gcloud info"
+      - name: test
+        run: pwd
 
-      # - name: Sync API server into deploy package
-      #   run: |
-      #     rm -rf "${DEPLOY_DIR}/server"
-      #     cp -R server "${DEPLOY_DIR}/server"
-      #
-      # - name: Deploy telegram bot function
-      #   working-directory: ${{ env.DEPLOY_DIR }}
-      #   env:
-      #     FUNCTION_NAME: ${{ env.FUNCTION_NAME }}
-      #   run: >
-      #     gcloud functions deploy "${FUNCTION_NAME}"
-      #     --gen2
-      #     --runtime=nodejs20
-      #     --region=europe-west1
-      #     --source=.
-      #     --entry-point=telegram
-      #     --trigger-http
-      #     --env-vars-file .env.yaml
+      - name: Sync API server into deploy package
+        run: npm run sync
+       
+        # run: |
+        #   rm -rf "${DEPLOY_DIR}/server"
+        #   cp -R server "${DEPLOY_DIR}/server"
+
+      - name: Deploy telegram bot function
+        working-directory: ${{ env.DEPLOY_DIR }}
+        env:
+          FUNCTION_NAME: ${{ env.FUNCTION_NAME }}
+        run: >
+          gcloud functions deploy "${FUNCTION_NAME}"
+          --gen2
+          --runtime=nodejs20
+          --region=europe-west1
+          --source=.
+          --entry-point=telegram
+          --trigger-http
