--- a/.github/workflows/deploy_pt.yml
+++ b/.github/workflows/deploy_pt.yml
@@ -29,15 +29,10 @@ jobs:
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v3
 
-      - name: test
-        run: pwd
-
-      - name: Sync API server into deploy package
-        run: npm run sync
-       
-        # run: |
-        #   rm -rf "${DEPLOY_DIR}/server"
-        #   cp -R server "${DEPLOY_DIR}/server"
+      - name: Sync server into deploy package
+        run: |
+          rm -rf "${DEPLOY_DIR}/server"
+          cp -R server "${DEPLOY_DIR}/server"
 
       - name: Deploy telegram bot function
         working-directory: ${{ env.DEPLOY_DIR }}
