--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -1,13 +1,13 @@
 {
   "name": "functions",
+  "version": "1.0.0",
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log",
-    "sync": "rm -r ./server && cp -r ../../server ./server"
+    "logs": "firebase functions:log"
   },
   "engines": {
     "node": "18"
@@ -16,7 +16,7 @@
   "dependencies": {
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.5.0",
-    "server": "file:server"
+    "server": "1.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
