--- a/pt_deploy/package.json
+++ b/pt_deploy/package.json
@@ -2,16 +2,22 @@
   "name": "pt_deploy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc -p .",
     "deploy:bot": "gcloud functions deploy nodejs-http-function --gen2 --runtime=nodejs20  --region=europe-west1 --source=. --entry-point=telegram --trigger-http --env-vars-file .env.yaml",
-    "deploy:api": "gcloud functions deploy api --gen2 --runtime=nodejs20  --region=europe-west1 --source=. --entry-point=api --trigger-http --env-vars-file .env.yaml",
-    "sync": "rm -r ./server && cp -r ../../server ./server"
+    "deploy:api": "gcloud functions deploy api --gen2 --runtime=nodejs20  --region=europe-west1 --source=. --entry-point=api --trigger-http --env-vars-file .env.yaml"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/functions-framework": "^3.3.0",
-    "server": "file:server"
+    "@google-cloud/functions-framework": "^4.0.1",
+    "server": "1.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.7.4",
+    "typescript": "^5.9.3"
   }
 }
