--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mike/server",
+  "name": "server",
   "version": "1.0.0",
   "description": "revise words server API",
   "main": "index.js",
@@ -15,10 +15,8 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@google-cloud/text-to-speech": "^5.0.1",
-    "@notionhq/client": "^2.2.13",
     "dotenv": "^16.3.1",
     "fastify": "^4.22.2",
-    "jest": "^29.7.0",
     "js-levenshtein": "^1.1.6",
     "mongodb": "^7.0.0",
     "node-telegram-bot-api": "^0.63.0",
