--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "notion-revise-words",
   "private": true,
   "version": "1.0.0",
-  "packageManager": "yarn@1.22.22",
   "workspaces": [
     "client",
     "server",
@@ -12,5 +11,6 @@
     "client:dev": "yarn workspace my-react-telegram-web-app dev",
     "server:api": "yarn workspace server api",
     "server:telegram": "yarn workspace server telegram"
-  }
+  },
+  "packageManager": "yarn@4.12.0"
 }
