--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 *.service-account.json
 .DS_Store
 node_modules
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
