--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "revise words server API",
   "type": "module",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "telegram": "node dev.js --bot | pino-pretty",
     "api": "node dev.js --api",
     "webhook:off": "node ./scripts/removeWebhook.js",
     "webhook:on": "node ./scripts/setWebhook.js",
-    "check-types": "tsc"
+    "check-types": "tsc --noEmit",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -26,7 +27,11 @@
     "telegram-escape": "^1.1.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.3",
+    "@types/node": "^24.10.1",
     "@types/node-telegram-bot-api": "^0.63.3",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
     "eslint": "^8.48.0",
     "eslint-config-google": "^0.14.0",
     "pino-pretty": "^10.3.0",
