--- a/client/package.json
+++ b/client/package.json
@@ -29,11 +29,14 @@
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-config-xo": "^0.45.0",
     "eslint-config-xo-typescript": "^4.0.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "prettier": "^3.7.4",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.1",
     "vite": "^5.3.1"
