--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,9 +39,9 @@ jobs:
           cache: 'npm'
           cache-dependency-path: './'
       - name: Install dependencies
-        run: cd client && npm install
+        run: yarn workspaces focus client 
       - name: Build
-        run: cd client && npm run build
+        run: yarn workspace client build 
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
