--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-telegram-web-app",
+  "name": "client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/eslint__js": "^8.42.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -37,6 +38,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.7.4",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.1",
     "vite": "^5.3.1"
