--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,15 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-router": "^1.147.3",
+    "@tanstack/react-router-ssr-query": "^1.147.3",
+    "@tanstack/react-start": "^1.149.0",
     "@telegram-apps/telegram-ui": "^2.1.4",
     "@twa-dev/sdk": "^7.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
@@ -28,7 +32,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-config-xo": "^0.45.0",
@@ -37,10 +41,11 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "nitro": "^3.0.1-alpha.1",
     "prettier": "^3.7.4",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.1",
-    "vite": "^5.3.1"
+    "vite": "^7.0.0"
   }
 }
