Moved image to google cloud storage

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,4 +9,6 @@ GOOGLE_APPLICATION_CREDENTIALS=path.to.gcloud.service.account
 LANGUAGE_CODE=en-US
 VOICE_NAME=en-US-Wavenet-B
 TMA_URL=telegram.miniapp.url
-
+GOOGLE_SEARCH_API_KEY=search_api_key
+GOOGLE_SEARCH_ENGINE_ID=search_engine_id
+GOOGLE_CLOUD_STORAGE_BUCKET=bucket_name
