--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@google-cloud/storage": "^7.18.0",
     "@google-cloud/text-to-speech": "^5.0.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.22.2",
