--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.45.1",
     "@telegram-apps/telegram-ui": "^2.1.4",
     "@twa-dev/sdk": "^7.0.0",
+    "canvas-confetti": "^1.9.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.23.1"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "@tailwindcss/vite": "^4.1.17",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/eslint__js": "^8.42.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
