--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
+    "@fastify/cors": "^11.2.0",
+    "@fastify/multipart": "^9.4.0",
     "@google-cloud/storage": "^7.18.0",
     "@google-cloud/text-to-speech": "^5.0.1",
     "dotenv": "^16.3.1",
-    "fastify": "^4.22.2",
+    "fastify": "^5.0.0",
     "js-levenshtein": "^1.1.6",
     "mongodb": "^7.0.0",
     "node-telegram-bot-api": "^0.63.0",
